--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,9 +63,33 @@ p{
 	padding-top: 9px;
 	font-weight: bold;
 	line-height: 1;
+	&:hover{
+		color: #fff;
+		text-decoration: none;
+	}
 }
 
-#logo:hover{
-	color: #fff;
-	text-decoration: none;
+/* footer */
+
+footer{
+	margin-top: 45px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
+	a{
+		color: #555;
+			&:hover{
+			color: #222;
+		}
+	}
+	small{
+		float: left;
+	}
+	ul{
+		float: right;
+		list-style: none;
+		li{
+			float: left;
+			margin-left: 10px;
+		}
+	}
 }
