--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,27 +5,13 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svm/trunk/html5.js"></script>
-  <![endif]-->
+  <%= render 'layouts/shim' %>
 </head>
 <body>
- <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
-    <nav>
-     <ul class="nav pull-right">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Sign in", '#' %></li>
-     </ul>
-    </nav>
-   </div>
-  </div>
- </header>
+ <%= render 'layouts/header' %>
  <div class="container">
   <%= yield %>
+  <%= render 'layouts/footer' %>
  </div>
 </body>
 </html>
